--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "thiagoalessio/tesseract_ocr": "^2.12"
     },
     "require-dev": {
+        "askdkc/breezejp": "^2.2",
         "fakerphp/faker": "^1.23",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.2.2",
